# tetris

./: CMakeLists.txt  README.md
include/: board.hpp  cell.hpp  common.hpp  player.hpp  renderer.hpp  tetris.hpp  tetro.hpp
src/: lib.rs  main.cpp  main.rs
src/game/: board.cpp  cell.cpp  cells.rs  mod.rs  player.cpp  tetris.cpp  tetro.cpp  tetros.rs
src/game/board/: board.cpp  cell.cpp
src/game/tetros/: tetro.cpp
src/render/: renderer.cpp
src/rendering/: board.rs
